Add editing product feature for admin user

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -83,7 +83,7 @@
                                         <i class="fas fa-chevron-left"></i>
                                     </span>Continue Shopping    
                                 </a>
-                                <input type="submit" class="btn btn-md rounded-0 py-3 mt-5 px-5 shop-now-button bttn-success font-weight-bold" value="Add to Cart">
+                                <input class="btn btn-md btn-success rounded-0 py-3 mt-5 px-5 checkout font-weight-bold" type="submit" value="Add to Cart">
                             </div>
                             <!-- This redirect url field below will contain the current URL.
                             It'll be sent to the view we'll post this form to so we can 
