--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -16,7 +16,7 @@
             <div class="col-12 col-md-6">  <!-- div col starts -->
                 <hr>
                 <h2 class="logo-font mb-4"><em>Store Management</em></h2>
-                <h5 class="text-muted"><em>Add a Product</em></h5>
+                <h5 class="text-muted"><em>Delete a Product</em></h5>
                 <div class="row float-right">
                     <div class="col-lg-12">
                         <!--<div class="box-element">
@@ -35,12 +35,12 @@
 
         <div class="row">  <!-- row div starts -->
             <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                <form method="POST" action="{% url '' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    <h1>Are you sure you want to delete this product "{{product.item.name}}"?</h1><br> 
                     <div class="text-right">
-                        <a class="btn btn-dark rounded-0 signIn-btn" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-success rounded-0 signIn-btn" type="submit">Add Product</button>
+                        <a class="btn btn-dark rounded-0" href="{% url 'add_product' %}">Cancel</a>
+                        <button class="btn btn-danger rounded-0 signIn-btn" type="submit">Delete Product</button>
                     </div>
                 </form>
             </div>
