--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -73,7 +73,7 @@
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
 
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer pt-0 border-0 text-left btn-black">
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
@@ -89,6 +89,14 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating!</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                            <div>
+                                                <small class="ml-3">
+                                                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                    <a class="text-danger" href="{% url 'delete' product.id %}">Delete</a>
+                                                </small>
+                                            </div>
+                                            {% endif %}
                                             <!-- <p class="mt-3">{{ product.description }}</p> -->
                                             <div class="cart-btn">                                              
                                                 <a class="btn btn-md btn-success mt-5 font-weight-bold" href="{% url 'add_to_cart' product.id %}">Add to Cart</a>
@@ -96,7 +104,6 @@
                                             <div class="view-btn">
                                                 <a class="btn btn-md btn-dark text-white view-expand font-weight-bold" href="{% url 'product_detail' product.id %}">View</a>
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
