--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -37,7 +37,13 @@
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    {% for field in form %}
+                        {% if field.name != 'image' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-dark rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-success rounded-0 signIn-btn" type="submit">Update Product</button>
@@ -62,6 +68,13 @@
     <script type="text/javascript">
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
+        })
+    </script>
+
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);    
         })
     </script>
 
