--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 <!-- 1st col div below contains the wiGalleria logo  -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                     <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                        <h2 class="text-white my-0">wi<em><strong>G</strong></em>alleria</h2>
+                        <h2 class="my-0">wi<em><strong>G</strong></em>alleria</h2>
                     </a>
                 </div>
                 <!-- 2nd col div below contains the search form.   -->
