Add description/keywords meta tags to base.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -55,9 +55,9 @@
                             </h5></th>
                             <th>
                                 <a class="btn btn-md btn-dark rounded-0 py-3 shop-now-button font-weight-bold" href="{% url 'products' %}">
-                                    <span class="icon">
+                                    Continue Shopping <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
-                                    </span>Continue Shopping    
+                                    </span>   
                                 </a>
                             </th>
                             <th>
