--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,18 @@
 <!doctype html>
 <html lang="en">
     <head>
-
         <!-- Required meta tags -->
         {% block meta %}
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="description" 
+                content="Human hair and Synthetic Wigs for women, natural looking wigs for women, 
+                cheap good quality human hair wig, hair care products for human and synthetic wigs.">
+            <meta name="keywords" content="human hair wig, synthetic wig, 360 lace frontal wig, 360 
+                human hair full lace wig, glueless lace wig, 13x4 lace wig, kinky curly human hair 
+                wig, 13x6 frontal lace wig, 13x2 side part short wig, short human hair wig, european 
+                center part wig, full lace wig">
         {% endblock %}
 
         {% block extra_meta %}
@@ -17,7 +23,6 @@
         <!-- Bootstrap CSS -->
         {% block corecss %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"> -->
             <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
