--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,15 +1,12 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item d-block d-md-none">  <!-- d-md-none -->
+        <li class="nav-item d-block d-md-none">  
             <a class="font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
 
         <li class="nav-item dropdown">
-            <!-- <button class="btn dropdown-toggle font-weight-bold text-white border-0" type="button" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
-            </button> -->
             <a class="font-weight-bold nav-link text-white mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
@@ -22,9 +19,6 @@
         </li>
 
         <li class="nav-item dropdown">
-            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Wigs
-            </button> -->
             <a class="font-weight-bold nav-link text-white mr-5" href="#" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wigs
             </a>
@@ -37,9 +31,6 @@
         </li>
 
         <li class="nav-item dropdown">
-            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Hair Care Products
-            </button> -->
             <a class="font-weight-bold nav-link text-white mr-5" href="#" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hair Care Products
             </a>
@@ -52,9 +43,6 @@
         </li>
 
         <li class="nav-item dropdown">
-            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Deals
-            </button> -->
             <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Deals
             </a>
