--- a/static/css/base.css
+++ b/static/css/base.css
@@ -396,22 +396,16 @@ a h2.my-0:hover {
 
 .control {
     width: 30%;
-    /* height: 100%; */
     display: inline;
 }
 
 .control > textarea {
     width: inherit;
-    /* height: inherit; */
 }
 
 .textarea {
     border-radius : 5px;
 }
-
-/* .select {
-    margin-bottom: 5px;
-} */
 
 .submit-bttn {
     border-radius: 8px;
@@ -429,7 +423,6 @@ a.checkout {
 .bttn-success {
     background-color:green;
     color: #fff;
-    /* border: solid 2px black; */
 }
 
 .bttn-success:hover {
@@ -438,19 +431,9 @@ a.checkout {
     border: solid 2px black;
 }
 
-/* .btn-update {
-    padding-left: 15px;
-    padding-right: 15px;
-} */
-
-/* a.shopping-btn {
+/* h5.no-of-items {
     margin-left: 150px;
-    margin-bottom: 10px;
 } */
-
-h5.no-of-items {
-    margin-left: 150px;
-}
 
 p.cart-empty {
     margin-top: 150px;
@@ -542,17 +525,6 @@ since all other inputs will have placeholders. */
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
-/* @media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
-} */
-
-/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .display-4.text-white {
         font-size: 2rem;
@@ -588,9 +560,9 @@ since all other inputs will have placeholders. */
         font-size: 10px;
     }
 
-    h5.no-of-items {
+    /* h5.no-of-items {
         margin-left: 0;
-    }
+    } */
 
     thead.text-black {
         font-size: 8px;
