--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,4 +25,20 @@
         </div>
     </div>
 </div>
+<!-- BACK TO TOP BUTTON -->
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
+{% endblock %}
+
+<!-- JAVASCRIPT FOR BACK TO TOP BUTTON -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        })
+    </script>
 {% endblock %}
