--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -142,6 +142,7 @@
             </div>
         </div>
     </div>  <!-- container class ends -->
+    <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
