Fix bug on the form in cart.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -185,7 +185,7 @@
     // Updates Quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
-        form.submit();
+        form[0].requestSubmit();
     })
 
     // Removes Item and reload on click
