--- a/templates/base.html
+++ b/templates/base.html
@@ -152,13 +152,17 @@
 
         <!-- Footer -->
         <footer class="footer mt-auto py-3 dark-bg navbar-dark bg-dark">
-            <p class="m-0 text-center text-white footer-weight">
+            <p class="m-0 text-center text-white">
                 Developed by Christiana Temiola <br />
                 for wiGalleria&copy;<small><em>2022</em></small> All rights reserved.
             </p>
-            <p class="m-0 text-center .text-dark"><span class="footer-weight text-white">Follow us:</span> 
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
+            <p class="m-0 text-center"><span class="text-white">Follow us:</span> 
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3 text-white"></i></a>
             </p>
+
+            <div class="col-12">
+                <a class="no-underline" href="https://www.privacypolicygenerator.info/live.php?token=zvzvG53D4jfJETwvT1y2MqSfxIvfE4fR" target="_blank"><em>Privacy Policy</em></a>
+            </div>
         </footer>
 
         {% if messages %}
