--- a/templates/base.html
+++ b/templates/base.html
@@ -157,11 +157,19 @@
                 for wiGalleria&copy;<small><em>2022</em></small> All rights reserved.
             </p>
             <p class="m-0 text-center"><span class="text-white">Follow us:</span> 
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3 text-white"></i></a>
+                <a href="https://www.facebook.com/wiGalleria-110791034831427/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3 text-white"></i></a>
             </p>
-
+                        
             <div class="col-12">
-                <a class="no-underline" href="https://www.privacypolicygenerator.info/live.php?token=zvzvG53D4jfJETwvT1y2MqSfxIvfE4fR" target="_blank"><em>Privacy Policy</em></a>
+                <a class="text-white no-underline" href="https://www.privacypolicygenerator.info/live.php?token=zvzvG53D4jfJETwvT1y2MqSfxIvfE4fR" target="_blank"><em>Privacy Policy</em></a>
+            </div>
+            
+            <div class="col-12">
+                <h6 class="text-white right"><em>Subscribe!</em></h6>
+            </div>
+            <div class="col-12">
+                <p class="text-white right">Subscribe to our monthly <br> newsletter for exclusive <br> deals & offers</p>
+                <!-- Mailchimp signup form here -->
             </div>
         </footer>
 
