--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
         {% block corecss %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
 
@@ -150,28 +152,73 @@
         {% block content %}
         {% endblock %}
 
-        <!-- Footer -->
-        <footer class="footer mt-auto py-3 dark-bg navbar-dark bg-dark">
-            <p class="m-0 text-center text-white">
-                Developed by Christiana Temiola <br />
-                for wiGalleria&copy;<small><em>2022</em></small> All rights reserved.
-            </p>
-            <p class="m-0 text-center"><span class="text-white">Follow us:</span> 
-                <a href="https://www.facebook.com/wiGalleria-110791034831427/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3 text-white"></i></a>
-            </p>
+    <!-- Footer -->
+    <footer>
+        <div>
+            <section class="footer mt-auto py-3 dark-bg bg-dark">
+                <div class="row"> <!-- 1st row div starts -->
+                    <div class="col-12 page-header mb-4">  <!-- 1st col div starts -->
+                        <h5 class="m-0 text-center text-white">Developed by Christiana Temiola</h5>
+                        <p class="m-0 text-center text-white">for wiGalleria&copy;<small><em>2022</em></small> <br> <small>All rights reserved.</small></p>
+                        <hr class="block-divider block-divider--short">
+                    </div>  <!-- 1st col div ends -->
+                </div> <!-- 1st row div ends -->
+
+                <div class="row">  <!-- 2nd row div starts -->
+                    <div class="col-12 col-md-6 text-center">  <!-- 2nd col div starts -->
+                        <h4 class="text-white">Social</h4>
+                        <p class="m-0"><span class="text-white">Follow us on:</span> 
+                            <a href="https://www.facebook.com/wiGalleria-110791034831427/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3 text-white"></i></a>
+                        </p>
+                    </div>  <!-- 2nd col div ends -->
+
+                    <div class="col-12 col-md-6">  <!-- 3rd col div starts -->
+                        <!-- <h4 class="text-white">Subscribe!</h4>
+                        <p class="text-white">Subscribe to our monthly newsletter to get exclusive deals and offers</p> -->
+                        <!-- Begin Mailchimp Signup Form -->
                         
-            <div class="col-12">
-                <a class="text-white no-underline" href="https://www.privacypolicygenerator.info/live.php?token=zvzvG53D4jfJETwvT1y2MqSfxIvfE4fR" target="_blank"><em>Privacy Policy</em></a>
-            </div>
+                        <div id="mc_embed_signup">
+                            <form action="https://herokuapp.us20.list-manage.com/subscribe/post?u=2c272d8def37982eb245c2bba&amp;id=264930d993" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
+                                <h4 class="text-white text-center mt-3">Subscribe</h4>
+                                <p class="text-white text-center">Subscribe to our monthly newsletter to get exclusive deals and offers</p>
+                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="mc-field-group">
+                                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                                    </label>
+                                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                                </div>
+                                <!-- <div class="mc-field-group input-group">
+                                    <strong>Email Format </strong>
+                                    <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
+                                    <li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
+                                    </ul>
+                                </div> -->
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c272d8def37982eb245c2bba_264930d993" tabindex="-1" value=""></div>
+                                    <div class="optionalParent">
+                                        <div class="clear foot">
+                                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-margin-top">
+                                            <p class="brandingLogo ml-5 mt-5"><a href="http://eepurl.com/hSw38v" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <!--End mc_embed_signup-->
+                    </div>  <!-- 3rd col div ends -->
             
-            <div class="col-12">
-                <h6 class="text-white right"><em>Subscribe!</em></h6>
-            </div>
-            <div class="col-12">
-                <p class="text-white right">Subscribe to our monthly <br> newsletter for exclusive <br> deals & offers</p>
-                <!-- Mailchimp signup form here -->
-            </div>
-        </footer>
+                    <div class="col-12">
+                        <a class="ml-5 text-white no-underline policy" href="https://www.privacypolicygenerator.info/live.php?token=zvzvG53D4jfJETwvT1y2MqSfxIvfE4fR" target="_blank"><em>Privacy Policy</em></a>
+                    </div>
+                </div>  <!-- 2nd row div ends -->
+            </section>
+        </div>
+    </footer>
+    <!-- /.footer -->
 
         {% if messages %}
             <div class="message-container">
@@ -191,11 +238,32 @@
             </div>
         {% endif %}
 
-        
-
         {% block postloadjs %}
         <script type="text/javascript">
             $('.toast').toast('show');
+        </script>
+
+        <!-- Mailchimp scripts -->
+        <script type='text/javascript' 
+            src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script type='text/javascript'>
+            (function($) {
+                window.fnames = new Array(); 
+                window.ftypes = new Array();
+                fnames[0]='EMAIL';
+                ftypes[0]='email';
+                fnames[1]='FNAME';
+                ftypes[1]='text';
+                fnames[2]='LNAME';
+                ftypes[2]='text';
+                fnames[3]='ADDRESS';
+                ftypes[3]='address';
+                fnames[4]='PHONE';
+                ftypes[4]='phone';
+                fnames[5]='BIRTHDAY';
+                ftypes[5]='birthday';
+                }(jQuery));
+                var $mcj = jQuery.noConflict(true);
         </script>
         {% endblock %}
  
