--- a/static/css/base.css
+++ b/static/css/base.css
@@ -466,8 +466,16 @@ a.no-underline {
     font:14px Helvetica, Arial, sans-serif; 
 }
 
+#mc_embed_signup.asterisk {
+    color: #fff;
+}
+
 .btn-margin-top {
     margin-top: 1px;
+}
+
+.mc-field-group.asterisk {
+    color: #fff;
 }
 
 /* #subscribe-btn {
