Add steps to create AWS S3 Bucket & IAM to README

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -568,7 +568,7 @@ since all other inputs will have placeholders. */
     }
 
     #mc_embed_signup.foot {
-        align-items: left;
+        align-items: flex-start;
     }
 }
 
