--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,20 +8,20 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="container mb-2">  <!-- container div starts -->
         <div class="row">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4"><em>Shopping Cart</em></h2>
             </div>
         </div>
-    <!-- </div> -->
+        <!-- </div> -->
 
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row"> <!-- row div starts -->
+            <div class="col-lg-12">  <!-- col div starts -->
                 <div class="box-element">  <!-- box element div starts -->
-                    <table class="table">
-                        <tr>
+                    <table class="table">  <!-- table class starts -->
+                        <tr>  <!-- tr element starts -->
                             <th>
                                 <p class="no-of-items font-weight-bold">Items:
                                     {% if cart_items %} 
@@ -31,7 +31,7 @@
                                     {% else %}
                                         0
                                     {% endif %}
-                                    </p>
+                                </p>
                             </th>
                             <th>
                                 <p class="font-weight-bold">Total: 
@@ -46,28 +46,30 @@
                             </th>
                             <th>
                                 <a class="btn btn-md btn-dark rounded-0 py-3 shop-now-button font-weight-bold" href="{% url 'products' %}">
-                                    Continue Shopping <span class="icon">
+                                    Continue Shopping 
+                                    <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>   
                                 </a>
                             </th>
                             <th>
                                 <a class="btn btn-md btn-success rounded-0 py-3 checkout font-weight-bold" href="{% url 'checkout' %}">
-                                    Secure Checkout<span class="icon">
+                                    Secure Checkout
+                                    <span class="icon">
                                         <i class="fas fa-lock"></i>
                                     </span>
                                 </a>
                             </th>                        
-                        </tr>
-                    </table>
+                        </tr>  <!-- tr element ends -->
+                    </table>  <!-- table class ends -->
                 </div>  <!-- box element div ends -->
             
-                <div class="row">
+                <div class="row">  <!-- row 3 div starts -->
                     <!-- This column will contain a table to show the cart contents. -->
-                    <div class="col">
+                    <div class="col">  <!-- col div starts -->
                         {% if cart_items %}
-                            <div class="table-responsive rounded">
-                                <table class="table table-sm table-borderless">
+                            <div class="table-responsive rounded"> <!-- table responsive class starts -->
+                                <table class="table table-sm table-borderless">  <!-- table class starts -->
                                     <thead class="text-black">
                                         <tr>
                                             <th scope="col">Product Detail</th>
@@ -150,15 +152,16 @@
                                             {% endif %}
                                         </td>
                                     </tr>
-                                </table>  
-                            </div>
+                                </table>  <!-- table class ends -->
+                            </div>  <!-- table responsive class ends -->
                         {% else %}
                             <p class="lead mb-5 text-center">Your bag is empty.</p>
                         {% endif %}
-
+                    </div>  <!-- col div ends -->
+                </div> <!-- row 3 div ends -->
             </div> <!-- col div ends -->
         </div>  <!-- row div ends -->
-    </div>
+    </div>  <!-- container div ends -->
 
     <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
