--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,11 +1,11 @@
-<script type="text/javascript">
+<script>
     function handleEnableDisable(itemId) {
         var currentValue = parseInt($(`#id_qty_${itemId}`).val());
         var minusDisabled = currentValue < 2;
         var plusDisabled = currentValue > 98;
         $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
         $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
-    }
+    };
 
     // Ensures proper enabling/disabling of all inputs on page load
     var allQtyInputs = $('.qty_input');
@@ -18,7 +18,7 @@
     $('qty_input').change(function () {
         var itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
-    })
+    });
 
     // INCREMENT QUANTITY FUNCTION
     $('.increment-qty').click(function (e) {
