--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,7 +36,7 @@
 <!-- JAVASCRIPT FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
         })
