--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,21 +2,17 @@
 {% load static %}
 
 {% block page_header %}
-    <!-- <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div> -->
+    
 {% endblock %}
 
 {% block content %}
 <!-- This full-page overlay below will be used to cover up the body's 
     background image & give this all products page a white background. -->
 <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
+    <div class="container-fluid">  <!-- container-fluid class starts -->
+        <div class="row">  <!-- row div starts -->
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">  <!-- col-12 class starts -->
+                <div class="image-container my-5">  <!-- image container class starts -->
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -26,10 +22,10 @@
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
+                </div>  <!-- image container class ends -->
+            </div>  <!-- col-12 class ends -->
+            <div class="col-12 col-md-6 col-lg-4">  <!-- col-12 class starts -->
+                <div class="product-details-container mb-5 mt-md-5">  <!-- product-details container class starts -->
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                     {% if product.category %}
@@ -53,43 +49,43 @@
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
+                        <div class="form-row">  <!-- form row class starts -->
+                            <div class="col-12">  <!-- div col 12 class starts -->
                                 <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
+                                <div class="form-group w-50">  <!-- div form group class starts -->
+                                    <div class="input-group">  <!-- div input group class starts -->
+                                        <div class="input-group-prepend"> <!-- div input group prepend class starts -->
                                             <button class="decrement-qty btn btn-black rounded-0" 
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                        </div>
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>  <!-- div input group prepend class ends -->
                                         <input class="form-control qty_input" type="number" 
                                             name="quantity" value="1" min="1" max="99" 
                                             data-item_id="{{ product.id }}" 
                                             id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
+                                        <div class="input-group-append">  <!-- div input group append class starts -->
                                             <button class="increment-qty btn btn-black rounded-0" 
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>  <!-- div input group append class ends -->
+                                    </div>  <!-- div input group class ends -->
+                                </div>  <!-- div form group class ends -->
+                            </div>  <!-- div col 12 class ends -->
 
-                            <div class="col-12">
+                            <div class="col-12"> <!-- div col 12 class starts -->
                                 <a class="btn btn-md btn-dark rounded-0 py-3 mt-5 shop-now-button font-weight-bold" href="{% url 'products' %}">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>Continue Shopping    
                                 </a>
                                 <input class="btn btn-md btn-success rounded-0 py-3 mt-5 px-5 checkout font-weight-bold" type="submit" value="Add to Cart">
-                            </div>
+                            </div>  <!-- div col 12 class ends -->
                             <!-- This redirect url field below will contain the current URL.
                             It'll be sent to the view we'll post this form to so we can 
                             redirect the user back to the same page once the product is added 
@@ -105,27 +101,31 @@
                         <form class="d-inline" action="{% url 'like_product' product.pk %}" method="POST">
                             {% csrf_token %}
                             {% if liked %}
-                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like"><i
-                                class="fas fa-heart"></i></button>
-    
+                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like">
+                                <i class="fas fa-heart"></i>
+                            </button>
                             {% else %}
-                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like"><i
-                                class="far fa-heart"></i></button>
-    
+                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like">
+                                <i class="far fa-heart"></i>
+                            </button>
                             {% endif %}
                         </form>
                         {% else %}
-                        <span class="text-secondary"><i class="far fa-heart"></i></span>
+                        <span class="text-secondary">
+                            <i class="far fa-heart"></i>
+                        </span>
                         {% endif %}
-                        <span class="text-secondary">{{ product.number_of_likes }}</span>
+                        <span class="text-secondary">
+                            {{ product.number_of_likes }}
+                        </span>
                     </strong>
 
-                    <a href="{% url 'add_to_wishlist' product.pk %}" class="btn btn-light" role="button" aria-disabled="true">Add to Wish List</a>
-                    <a href="{% url 'wishlist' %}" class="btn btn-light" role="button" aria-disabled="true">View your Wish List</a>
+                    <a href="{% url 'add_to_wishlist' product.pk %}" class="btn btn-light" role="button">Add to Wish List</a>
+                    <a href="{% url 'wishlist' %}" class="btn btn-light" role="button">View your Wish List</a>
                     
                 </div> <!-- product-details container class ends -->
             </div> <!-- col-12 class ends -->
-        </div>  <!-- row class ends -->
+        </div>  <!-- row div ends -->
     </div>  <!-- container-fluid class ends-->
 
     <!-- PRODUCT REVIEW CODE GOES HERE -->
@@ -138,7 +138,6 @@
                     <strong>Date: </strong>{{ review.created_on|date:"Y-m-d" }},
                     <strong>Stars: </strong>{{ review.stars }}
                 </p>
-
                 {{ review.content }}
             </div>
             <!-- This below is for if product has no Reviews -->
@@ -149,45 +148,43 @@
         {% endfor %}
     </div>
 
-    <div class="notification space-below">
+    <div class="notification space-below">  <!-- div notification class starts -->
         {% if request.user.is_authenticated %}
             <form class="no-reviews-wrapper" method="POST" action="{% url 'product_detail' product.id %}">
                 {% csrf_token %}
 
-                <div class="field">
+                <div class="field">  <!-- div field class starts -->
                     <label>Stars</label>
-
-                    <div class="control">
-                        <div class="select">
-                            <select name="stars">
+                    <div class="control">  <!-- div control class starts -->
+                        <div class="select">  <!-- div select class starts -->
+                            <select name="stars">  <!-- select starts -->
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3" selected>3</option>
                                 <option value="4">4</option>
                                 <option value="5">5</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+                            </select>  <!-- select ends -->
+                        </div>  <!-- div select class ends -->
+                    </div>  <!-- div control class ends -->
+                </div>  <!-- div field class ends -->
 
-                <div class="field">
+                <div class="field">  <!--  div field class starts -->
                     <label class="content-rev">Content</label>
-
                     <div class="control">
                         <textarea class="textarea" name="content"></textarea>
                     </div>
-                </div>
+                </div>  <!--  div field class ends -->
 
-                <div class="field">
+                <div class="field">   <!--  div field class starts -->
                     <div class="control">
                         <button class="button btn-success submit-bttn">Submit</button>
                     </div>
-                </div>
+                </div>   <!--  div field class ends -->
             </form>
             {% else %}
                 <p class="no-reviews-wrapper">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to add review!</p>
         {% endif %}
-    </div>
+    </div>  <!-- div notification class ends -->
 
     <div class="row">
         <div class="col">
@@ -220,14 +217,12 @@
                 </div>
             {% endfor %}
 
-            <!-- <a class="subtitle" href="{% url 'add_comment' product.pk %}">Add Comment</a> -->
-
         {% endif %}
         <br/>
     {% else %}
         <p class="no-reviews-wrapper notification">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to add comment!</p>
     {% endif %}
-    </div>
+    <!-- </div> -->
    
     <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
@@ -241,7 +236,7 @@
 {% block postloadjs %}
     {{ block.super }}
 
-    <script type="text/javascript">
+    <script>
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
         })
