Remove commented out code

--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -31,8 +31,8 @@
                                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                         </a>
                                     {% endif %}
-                            </div> <!-- image-container class ends-->
-                        </div> <!-- col 12 class ends-->
+                            </div> 
+                        </div> 
                         <div class="col-12 col-md-6 col-lg-4">
                         <div class="product-details-container mb-5 mt-md-5">
                             <p class="mb-0">{{ product.name }}</p>
@@ -53,8 +53,8 @@
                             <a class="btn btn-md py-3 btn-dark text-white view-expand font-weight-bold" type="button" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a>
                         </div>
                     </div>
-                </div> <!-- row div ends-->
-            </div> <!-- container-fluid class ends-->
+                </div> 
+            </div> 
             {% endfor %}
         <!-- If user is not authenticated but has not added any product to her wishlist -->
         {% else %}
@@ -66,7 +66,7 @@
         <p class="no-reviews-wrapper notification">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to view your Wish List!</p>
     {% endif %}
 </div>
-<!-- BACK TO TOP BUTTON -->
+
 <div class="btt-button shadow-sm rounded-0 border border-black">
     <a class="btt-link d-flex h-100">
         <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -74,7 +74,6 @@
 </div>
 {% endblock %}
 
-<!-- JAVASCRIPT FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
