--- a/templates/base.html
+++ b/templates/base.html
@@ -172,22 +172,18 @@
         <div>
             <section class=" container-fluid footer mt-auto py-3 dark-bg bg-dark">
                 <div class="row">
-                    <!-- 1st row div starts -->
                     <div class="col-12 page-header mb-4">
-                        <!-- 1st col div starts -->
                         <h5 class="m-0 text-center text-white">Developed by Christiana Temiola</h5>
                         <p class="m-0 text-center text-white">for wiGalleria&copy;
                             <small><em>2022</em></small> <br>
                             <small>All rights reserved.</small>
                         </p>
                         <hr class="block-divider block-divider--short">
-                    </div> <!-- 1st col div ends -->
-                </div> <!-- 1st row div ends -->
+                    </div> 
+                </div> 
 
-                <div class="row">
-                    <!-- 2nd row div starts -->
+                <div class="row">   
                     <div class="col-12 col-md-6 text-center">
-                        <!-- 2nd col div starts -->
                         <h4 class="text-white">Social</h4>
                         <p class="m-0">
                             <span class="text-white">Follow us on:</span>
@@ -196,7 +192,7 @@
                                 <i class="fab fa-facebook-square ms-3 text-white"></i>
                             </a>
                         </p>
-                    </div> <!-- 2nd col div ends -->
+                    </div> 
 
                     <div class="col-12 col-md-6">
                         <div id="mc_embed_signup">
@@ -244,7 +240,7 @@
                             </form>
                         </div>
                         <!--End mc_embed_signup-->
-                    </div> <!-- 3rd col div ends -->
+                    </div> 
 
                     <div class="col-12">
                         <a class="ml-5 text-white no-underline policy"
@@ -253,7 +249,7 @@
                             <em>Privacy Policy</em>
                         </a>
                     </div>
-                </div> <!-- 2nd row div ends -->
+                </div> 
             </section>
         </div>
     </footer>
