--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,20 +8,19 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">  <!-- container div starts -->
+    <div class="container mb-2">  
         <div class="row">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4"><em>Shopping Cart</em></h2>
             </div>
         </div>
-        <!-- </div> -->
 
-        <div class="row"> <!-- row div starts -->
-            <div class="col-lg-12">  <!-- col div starts -->
-                <div class="box-element">  <!-- box element div starts -->
-                    <table class="table">  <!-- table class starts -->
-                        <tr>  <!-- tr element starts -->
+        <div class="row"> 
+            <div class="col-lg-12">  
+                <div class="box-element">  
+                    <table class="table">  
+                        <tr>  
                             <th>
                                 <p class="no-of-items font-weight-bold">Items:
                                     {% if cart_items %} 
@@ -60,16 +59,16 @@
                                     </span>
                                 </a>
                             </th>                        
-                        </tr>  <!-- tr element ends -->
-                    </table>  <!-- table class ends -->
-                </div>  <!-- box element div ends -->
+                        </tr>  
+                    </table>  
+                </div>  
             
-                <div class="row">  <!-- row 3 div starts -->
+                <div class="row">  
                     <!-- This column will contain a table to show the cart contents. -->
-                    <div class="col">  <!-- col div starts -->
+                    <div class="col">  
                         {% if cart_items %}
-                            <div class="table-responsive rounded"> <!-- table responsive class starts -->
-                                <table class="table table-sm table-borderless">  <!-- table class starts -->
+                            <div class="table-responsive rounded"> 
+                                <table class="table table-sm table-borderless">  
                                     <thead class="text-black">
                                         <tr>
                                             <th scope="col">Product Detail</th>
@@ -152,16 +151,16 @@
                                             {% endif %}
                                         </td>
                                     </tr>
-                                </table>  <!-- table class ends -->
-                            </div>  <!-- table responsive class ends -->
+                                </table>  
+                            </div>  
                         {% else %}
                             <p class="lead mb-5 text-center">Your bag is empty.</p>
                         {% endif %}
-                    </div>  <!-- col div ends -->
-                </div> <!-- row 3 div ends -->
-            </div> <!-- col div ends -->
-        </div>  <!-- row div ends -->
-    </div>  <!-- container div ends -->
+                    </div>  
+                </div> 
+            </div> 
+        </div>  
+    </div> 
 
     <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
