--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -12,7 +12,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">  <!-- mb-2 -->
+    <div class="container">  
         <div class="row">
             <div class="col">
                 <hr>
@@ -21,50 +21,35 @@
                     <div class="col-lg-12">
                         <div class="box-element">
                             <a class="btn btn-md rounded-0 py-3 mb-2 btn-dark shop-now-button font-weight-bold" href="{% url 'products' %}">
-                            <!-- <a class="shop-now-button btn btn-lg rounded-0 py-3 shopping-btn" href="{% url 'products' %}"> -->
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>Continue Shopping    
                             </a>
-                        </div> <!-- box element class ends -->
-                    </div> <!-- col div ends -->
-                </div>  <!-- row div ends -->
+                        </div> 
+                    </div> 
+                </div>  
                 <hr>
             </div>
         </div>
-        <!-- </div> -->
 
-        <!-- <div class="row float-right">
-            <div class="col-lg-12">
-                <div class="box-element">
-                    <a class="btn btn-md rounded-0 py-3 mb-2 btn-dark shop-now-button font-weight-bold" href="{% url 'products' %}"> -->
-                    <!-- <a class="shop-now-button btn btn-lg rounded-0 py-3 shopping-btn" href="{% url 'products' %}"> -->
-                        <!-- <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>Continue Shopping    
-                    </a> -->
-                <!-- </div> --> <!-- box element class ends -->
-            <!-- </div> --> <!-- col div ends -->
-        <!-- </div> -->  <!-- row div ends -->
-
-        <div class="row">  <!-- row div starts -->
-            <div class="col-12 col-lg-6 order-lg-last mb-5">  <!-- col 12 div starts -->
+        <div class="row">  
+            <div class="col-12 col-lg-6 order-lg-last mb-5"> 
                 <p class="text-black">Order Summary 
                     <span class="cart-item-count">
                         {{ product_count }}
                     </span>
                 </p>
-                <div class="row"> <!-- row div starts -->
+                <div class="row"> 
                     <div class="col-7 offset-2">
                         <p class="mb-1 mt-0 small text-muted text-black">Item</p>
                     </div>
                     <div class="col-3 text-right">
                         <p class="mb-1 mt-0 small text-muted text-black">Subtotal</p>
                     </div>
-                </div>  <!-- row div ends -->
+                </div>  
                 {% for item in cart_items %}
-                    <div class="row">  <!-- item row div starts -->
-                        <div class="col-2 mb-1">  <!-- item col 2 div starts -->
+                    <div class="row">  
+                        <div class="col-2 mb-1">  
                             <a href="{% url 'product_detail' item.product.id %}">
                                 {% if item.product.image %}
                                     <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
@@ -72,7 +57,7 @@
                                     <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 {% endif %}
                             </a>
-                        </div>  <!-- item col 2 div ends -->
+                        </div>  
                         <div class="col-7">
                             <p class="my-0"><strong>{{ item.product.name}}</strong></p>
                             <p class="my-0 small text-muted">{{ item.quantity}}</p>
@@ -80,7 +65,7 @@
                         <div class="col-3 text-right">
                             <p class="my-0 small text-muted font-weight-bold">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </div>
-                    </div>  <!-- item row div ends -->
+                    </div> 
                 {% endfor %}
                 <hr class="my-0">
                 <div class="row text-black text-right">
@@ -94,8 +79,8 @@
                         <p class="my-0">€{{ delivery | floatformat:2 }}</p>  
                         <p class="my-0">€{{ grand_total|floatformat:2 }}</p>   
                     </div>
-                </div>  <!-- row div ends -->
-            </div>  <!-- col 12 div ends --> 
+                </div>  
+            </div>  
 
             <!-- Checkout form Section -->
             <!-- This column will contain a table to show the cart contents. -->
@@ -131,7 +116,7 @@
                     </fieldset>
                     <fieldset class="px-3">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment Details</legend>
-                        <!-- A Stripe card element will go here -->
+                        <!-- A Stripe card element goes here -->
                         <div class="mb-3" id="card-element"></div>
                         <!-- Used to display form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
@@ -139,16 +124,14 @@
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
-                    <div class="submit-button text-right">  <!-- submit button div starts -->
-                    <!-- <div class="submit-button text-right mt-5 mb-2"> -->
+                    <div class="submit-button text-right">  
                         <a class="btn btn-md rounded-0 py-3 mt-2 mb-2 btn-dark shop-now-button font-weight-bold" href="{% url 'view_cart' %}">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
-                            <span class="font-weight-bold">Update Cart</span> <!-- BA used Adjust Bag -->
+                            <span class="font-weight-bold">Update Cart</span> 
                         </a>
                         <button id="submit-button" class="btn btn-md btn-success rounded-0 py-3 checkout font-weight-bold">
-                        <!-- <button id="submit-button" class="btn btn-md rounded-0 py-3 mt-1 px-5 shop-now-button bttn-success font-weight-bold"> -->
                             <span class="font-weight-bold">Complete Order</span>
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
@@ -160,11 +143,11 @@
                             </span>
                             <span>Your Card will be charged<strong> €{{ grand_total|floatformat:2 }}</strong></span>
                         </p>
-                    </div>  <!-- submit button div ends -->
+                    </div>  
                 </form>
-            </div> <!-- col 12 div ends -->
-        </div>  <!-- row div ends -->
-    </div> <!-- container div ends -->
+            </div> 
+        </div>  
+    </div> 
     <div id="loading-overlay">
         <h1 class="text-light logo-font loading-spinner">
             <span class="icon">
