--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">  <!-- container div starts -->
+    <div class="container">  
         <div class="row">
             <div class="col">
                 <hr>
@@ -24,7 +24,7 @@
         <div class="row">
             <!-- Order summary will be rendered within this div -->
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper p-2"> <!-- order confirmation wrapper div starts border -->
+                <div class="order-confirmation-wrapper p-2"> 
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Info:</small>
@@ -70,7 +70,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Delivery Info:</small> <!-- BA used Delivering To: -->
+                            <small class="text-muted">Delivery Info:</small> 
                         </div>
                     </div>
 
@@ -184,7 +184,7 @@
                             <p class="mb-0">{{ order.grand_total }}</p>
                         </div>
                     </div>
-                </div>  <!-- order confirmation wrapper div ends -->
+                </div>  
             </div>
         </div>
         <div class="row">
@@ -206,9 +206,8 @@
                 {% endif %}
             </div>
         </div>
-    </div> <!-- container div ends -->
+    </div> 
 
-    <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -216,7 +215,6 @@
     </div>
 {% endblock %}
 
-<!-- JS FOR BACK TO TOP BUTTON & STRIPE KEYS -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
