--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -7,21 +7,21 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">  <!-- mb-2 -->
-        <div class="row">  <!-- div row starts -->
-            <div class="col-12 col-md-6">  <!-- div col starts -->
+    <div class="container">  
+        <div class="row">  
+            <div class="col-12 col-md-6">  
                 <hr>
                 <h2 class="logo-font mb-4"><em>Store Management</em></h2>
                 <h5 class="text-muted"><em>Add a Product</em></h5>
                 <div class="row float-right">
                     <div class="col-lg-12">
-                    </div> <!-- col div ends -->
-                </div>  <!-- row div ends -->
+                    </div> 
+                </div>  
                 <hr>
-            </div>  <!-- div col starts -->
-        </div>  <!-- div row ends -->
+            </div>  
+        </div>  
 
-        <div class="row">  <!-- row div starts -->
+        <div class="row">  
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -38,10 +38,9 @@
                     </div>
                 </form>
             </div>
-        </div>  <!-- row div ends -->
-    </div> <!-- container div ends -->
+        </div>  
+    </div> 
 
-    <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -49,7 +48,6 @@
     </div>
 {% endblock %}
 
-<!-- JS FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
