--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -6,13 +6,13 @@
 {% endblock %}
 
 {% block content %}
-<!-- This full-page overlay below will be used to cover up the body's 
-    background image & give this all products page a white background. -->
+<!-- The full-page overlay below is used to cover up the body's 
+    background image & give all except home page a white background. -->
 <div class="overlay"></div>
-    <div class="container-fluid">  <!-- container-fluid class starts -->
-        <div class="row">  <!-- row div starts -->
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">  <!-- col-12 class starts -->
-                <div class="image-container my-5">  <!-- image container class starts -->
+    <div class="container-fluid">  
+        <div class="row">  
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">  
+                <div class="image-container my-5">  
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -22,10 +22,10 @@
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
-                </div>  <!-- image container class ends -->
-            </div>  <!-- col-12 class ends -->
-            <div class="col-12 col-md-6 col-lg-4">  <!-- col-12 class starts -->
-                <div class="product-details-container mb-5 mt-md-5">  <!-- product-details container class starts -->
+                </div>  
+            </div>  
+            <div class="col-12 col-md-6 col-lg-4">  
+                <div class="product-details-container mb-5 mt-md-5">  
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                     {% if product.category %}
@@ -49,49 +49,50 @@
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
-                        <div class="form-row">  <!-- form row class starts -->
-                            <div class="col-12">  <!-- div col 12 class starts -->
+                        <div class="form-row">  
+                            <div class="col-12">  
                                 <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">  <!-- div form group class starts -->
-                                    <div class="input-group">  <!-- div input group class starts -->
-                                        <div class="input-group-prepend"> <!-- div input group prepend class starts -->
+                                <div class="form-group w-50">  
+                                    <div class="input-group">  
+                                        <div class="input-group-prepend"> 
                                             <button class="decrement-qty btn btn-black rounded-0" 
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
-                                        </div>  <!-- div input group prepend class ends -->
+                                        </div>  
                                         <input class="form-control qty_input" type="number" 
                                             name="quantity" value="1" min="1" max="99" 
                                             data-item_id="{{ product.id }}" 
                                             id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">  <!-- div input group append class starts -->
+                                        <div class="input-group-append">  
                                             <button class="increment-qty btn btn-black rounded-0" 
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
                                             </button>
-                                        </div>  <!-- div input group append class ends -->
-                                    </div>  <!-- div input group class ends -->
-                                </div>  <!-- div form group class ends -->
-                            </div>  <!-- div col 12 class ends -->
+                                        </div>  
+                                    </div>  
+                                </div>  
+                            </div>  
 
-                            <div class="col-12"> <!-- div col 12 class starts -->
+                            <div class="col-12"> 
                                 <a class="btn btn-md btn-dark rounded-0 py-3 mt-5 shop-now-button font-weight-bold" href="{% url 'products' %}">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>Continue Shopping    
                                 </a>
                                 <input class="btn btn-md btn-success rounded-0 py-3 mt-5 px-5 checkout font-weight-bold" type="submit" value="Add to Cart">
-                            </div>  <!-- div col 12 class ends -->
-                            <!-- This redirect url field below will contain the current URL.
+                            </div> 
+
+                            <!-- The redirect url field below will contain the current URL.
                             It'll be sent to the view we'll post this form to so we can 
                             redirect the user back to the same page once the product is added 
                             to their cart. -->
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </div>  <!-- form row class ends -->
+                        </div>  
                     </form>
 
                     <hr>
@@ -123,14 +124,13 @@
                     <a href="{% url 'add_to_wishlist' product.pk %}" class="btn btn-light" role="button">Add to Wish List</a>
                     <a href="{% url 'wishlist' %}" class="btn btn-light" role="button">View your Wish List</a>
                     
-                </div> <!-- product-details container class ends -->
-            </div> <!-- col-12 class ends -->
-        </div>  <!-- row div ends -->
-    </div>  <!-- container-fluid class ends-->
+                </div> 
+            </div> 
+        </div>  
+    </div>  
 
     <!-- PRODUCT REVIEW CODE GOES HERE -->
     <h2 class="subtitle">Reviews</h2>
-
     <div class="reviews-wrapper">
         {% for review in product.reviews.all %}
             <div class="notification space-below">
@@ -140,7 +140,6 @@
                 </p>
                 {{ review.content }}
             </div>
-            <!-- This below is for if product has no Reviews -->
             {% empty %}
                 <div class="notification space-below">
                     No reviews yet...
@@ -148,43 +147,42 @@
         {% endfor %}
     </div>
 
-    <div class="notification space-below">  <!-- div notification class starts -->
+    <div class="notification space-below">  
         {% if request.user.is_authenticated %}
             <form class="no-reviews-wrapper" method="POST" action="{% url 'product_detail' product.id %}">
                 {% csrf_token %}
-
-                <div class="field">  <!-- div field class starts -->
+                <div class="field">  
                     <label>Stars</label>
-                    <div class="control">  <!-- div control class starts -->
-                        <div class="select">  <!-- div select class starts -->
-                            <select name="stars">  <!-- select starts -->
+                    <div class="control">  
+                        <div class="select">  
+                            <select name="stars">  
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3" selected>3</option>
                                 <option value="4">4</option>
                                 <option value="5">5</option>
-                            </select>  <!-- select ends -->
-                        </div>  <!-- div select class ends -->
-                    </div>  <!-- div control class ends -->
-                </div>  <!-- div field class ends -->
+                            </select>  
+                        </div>  
+                    </div>  
+                </div>  
 
-                <div class="field">  <!--  div field class starts -->
+                <div class="field">  
                     <label class="content-rev">Content</label>
                     <div class="control">
                         <textarea class="textarea" name="content"></textarea>
                     </div>
-                </div>  <!--  div field class ends -->
+                </div>  
 
-                <div class="field">   <!--  div field class starts -->
+                <div class="field">   
                     <div class="control">
                         <button class="button btn-success submit-bttn">Submit</button>
                     </div>
-                </div>   <!--  div field class ends -->
+                </div>   
             </form>
             {% else %}
                 <p class="no-reviews-wrapper">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to add review!</p>
         {% endif %}
-    </div>  <!-- div notification class ends -->
+    </div> 
 
     <div class="row">
         <div class="col">
@@ -193,9 +191,7 @@
     </div>
 
     <!-- GENERAL COMMENTS CODE GOES HERE -->
-
     <h2 class="subtitle">Comments...</h2>
-
     {% if request.user.is_authenticated %}
         {% if not product.comments.all %}
         <div class="no-reviews-wrapper">
@@ -216,15 +212,12 @@
                         {{ comment.body }}
                 </div>
             {% endfor %}
-
         {% endif %}
         <br/>
     {% else %}
         <p class="no-reviews-wrapper notification">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to add comment!</p>
     {% endif %}
-    <!-- </div> -->
    
-    <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -232,7 +225,6 @@
     </div>
 {% endblock %}
 
-<!-- JS FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
 
@@ -242,8 +234,7 @@
         })
     </script>
 
-    {% include 'products/includes/quantity_input_script.html' %} 
-     
+    {% include 'products/includes/quantity_input_script.html' %}     
 {% endblock %}
 
 
