--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,8 +6,6 @@
 {% endblock %}
 
 {% block content %}
-<!-- This full-page overlay below will be used to cover up the body's 
-    background image & give this all products page a white background. -->
 <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
@@ -133,8 +131,8 @@
                 </div>
             </div>
         </div>
-    </div>  <!-- container class ends -->
-    <!-- BACK TO TOP BUTTON -->
+    </div>  
+    
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
