--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,5 +1,5 @@
 .order-history {
-    max-height: 416px;  /* height of profile form + submit button */
+    max-height: 416px; 
     overflow-y: auto;
 }
 
@@ -20,7 +20,3 @@
 #id-default-country option:first-child {
     color: #aab7c4;
 }
-
-/* .profile-form-input.textinput.textInput.form-control {
-    color: #000;
-} */
