--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,14 +15,14 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">  <!-- container div starts -->   
-        <div class="row">  <!-- row div starts -->
+    <div class="container">     
+        <div class="row">  
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4"><em>My Profile</em></h2>
                 <hr>
             </div>
-        </div>  <!-- row div ends -->
+        </div>  
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-black">Default Delivery Information</p>
@@ -71,10 +71,8 @@
                 </div>
             </div>
         </div>
-    </div>  <!-- container div ends -->
+    </div>  
 
-
-    <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -82,7 +80,6 @@
     </div>
 {% endblock %}
 
-<!-- JS FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
